--- a/functions/package.json
+++ b/functions/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "ethers": "^6.3.0",
     "firebase-admin": "^11.5.0",
-    "firebase-functions": "^4.2.0"
+    "firebase-functions": "^4.2.0",
+    "node-fetch": "^2.6.9"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
