Add logic to store last block to database

--- a/functions/package.json
+++ b/functions/package.json
@@ -4,11 +4,12 @@
     "lint": "eslint --ext .js,.ts .",
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "serve": "npm run build && firebase emulators:start --only functions",
+    "serve": "npm run build && firebase emulators:start --only functions,database",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "postinstall": "misc/fix-dependencies.sh"
   },
   "engines": {
     "node": "16"
@@ -17,7 +18,7 @@
   "dependencies": {
     "ethers": "^6.3.0",
     "firebase-admin": "^11.5.0",
-    "firebase-functions": "^4.2.0",
+    "firebase-functions": "^4.3.0",
     "node-fetch": "^2.6.9"
   },
   "devDependencies": {
