--- a/functions/package.json
+++ b/functions/package.json
@@ -16,6 +16,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/node-fetch": "^2.6.3",
     "ethers": "^6.3.0",
     "firebase-admin": "^11.5.0",
     "firebase-functions": "^4.3.0",
